Replace hardcoded Reach units with REACHUNIT - htm export Issue#: 2673294
git-svn-id: svn+ssh://svn.code.sf.net/p/pcgen/code/Trunk@10709 ef53c05b-3124-4d59-ae7d-fe3273f42be7

--- a/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_std.htm
+++ b/outputsheets/d20/fantasy/htmlxml/csheet_fantasy_std.htm
@@ -657,7 +657,7 @@ Wisdom
      <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.TYPE|<br /></b></td>
      <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.SIZE|<br /></b></td>
      <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.CRIT|/x|WEAPON.%weap.MULT|<br /></b></td>
-     <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.REACH| ft.<br /></b></td>
+     <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.REACH||WEAPON.%weap.REACHUNIT|<br /></b></td>
     </tr>
    </table>
    <table cellpadding="0" cellspacing="0" border="0" width="100%" summary="Weapon Table">
@@ -820,7 +820,7 @@ Wisdom
      <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.TYPE|<br /></b></td>
      <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.SIZE|<br /></b></td>
      <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.CRIT|/x|WEAPON.%weap.MULT|<br /></b></td>
-     <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.REACH| ft.<br /></b></td>
+     <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.REACH||WEAPON.%weap.REACHUNIT|<br /></b></td>
     </tr>
    </table>
    <table cellpadding="0" cellspacing="0" border="0" width="100%" summary="Weapon Table">
@@ -1416,7 +1416,7 @@ Wisdom
      <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.TYPE|<br /></b></td>
      <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.SIZE|<br /></b></td>
      <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.CRIT|/x|WEAPON.%weap.MULT|<br /></b></td>
-     <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.REACH| ft.<br /></b></td>
+     <td align="center" bgcolor="white" class="border8" class="font8"><b>|WEAPON.%weap.REACH||WEAPON.%weap.REACHUNIT|<br /></b></td>
     </tr>
    </table>
    <table cellpadding="0" cellspacing="0" border="0" width="100%" summary="Weapon Overflow">
@@ -1579,7 +1579,7 @@ Wisdom
      <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.TYPE|<br /></b></td>
      <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.SIZE|<br /></b></td>
      <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.CRIT|/x|WEAPON.%weap.MULT|<br /></b></td>
-     <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.REACH| ft.<br /></b></td>
+     <td align="center" bgcolor="white" class="border8"><b>|WEAPON.%weap.REACH||WEAPON.%weap.REACHUNIT|<br /></b></td>
     </tr>
    </table>
    <table cellpadding="0" cellspacing="0" border="0" width="100%" summary="Weapon Overflow">
